assets/css/site.scss
---
---

@import "{{ site.theme }}";
@import url('https://fonts.googleapis.com/css?family=Permanent+Marker|Montserrat');
/** Site Theming */

@mixin for-phone-only {
  @media (max-width: 599px) { @content; }
}
@mixin for-tablet-portrait-up {
  @media (min-width: 600px) { @content; }
}
@mixin for-tablet-landscape-up {
  @media (min-width: 900px) { @content; }
}
@mixin for-desktop-up {
  @media (min-width: 1200px) { @content; }
}
@mixin for-big-desktop-up {
  @media (min-width: 1800px) { @content; }
}
@mixin for-big-desktop-down {
	@media (max-width: 1799px) { @content; }
}
@mixin for-desktop-down {
	@media (max-width: 1199px) { @content; }
}
@mixin for-tablet-landscape-down {
	@media (max-width: 899px) { @content; }
}

body {
	background-attachment: fixed;
	background-image: url({{site.baseurl}}/assets/images/OSBackground.jpg);
	background-position: top;
	font-family: "Montserrat";
	height: 93%;
}

h1 {
	font-size: 3.2vmax;
	font-weight: bold;
		@include for-big-desktop-down {
			font-size: 3.4vmax;
		}
		@include for-desktop-down {
			font-size: 3.8vmax;
		}
		@include for-tablet-landscape-down {
			font-size: 4.1vmax;
		}
		@include for-phone-only {
			font-size: 4.4vmax;
		}
}

p, td {
	font-size: 0.8vmax;

		@include for-big-desktop-down {
			font-size: 1.0vmax;
		}
		@include for-desktop-down {
			font-size: 1.4vmax;
		}
		@include for-tablet-landscape-down {
			font-size: 1.7vmax;
		}
		@include for-phone-only {
			font-size: 1.6vmax;
		}
}

h2 {
	font-size: 1.3vmax;

		@include for-big-desktop-down {
			font-size: 1.5vmax;
		}
		@include for-desktop-down {
			font-size: 1.9vmax;
		}
		@include for-tablet-landscape-down {
			font-size: 2.2vmax;
		}
		@include for-phone-only {
			font-size: 2.0vmax;
		}
}

nav a, nav a:link, nav a:visited, nav a:hover, .feedpost a, .feedpost a:link, .feedpost a:hover, .feedpost a:visited {
	color: black;
}

nav a {
	opacity: 0.5;
}

nav a:hover {
	opacity: 1.0;
	text-decoration: none;
	transition: opacity 0.3s;
}

a.active {
	opacity: 1.0;
}

a.active:hover {
	opacity: 0.5;
	text-decoration:none;
	transition: opacity 0.3s;
}



/* Navigation */
nav {
	background: white;
	display: inline-block;
	height: 7vh;
	left: 0;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 9000;
}
nav ul {
	list-style: none;
	margin: 0;
}

nav ul li {
	display: inline;
	text-align: center;
}

nav img {
	height: 4vmin;
	opacity: 0.3;
	width: 4vmin;
}

nav img:hover {
	opacity: 0.7;
	transition: opacity 0.3s;
}

#navtable td{
	border: none;
	vertical-align: center;
}

#navtable {
	border: none;
	height: 100%;
	table-layout: fixed;
	width: 100%;
}


.left {
	font-family: "Permanent Marker";
	font-size: 2vmax;
	font-weight: bold;
	padding: 0;
	margin: 0;
	text-align: center;
	text-transform: uppercase;
	width: 25%;
}

.left a {
	opacity: 1;
}


.center {
	font-size: 1.3vmax;
	padding: 0;
	margin: 0;
	text-align: center !important;
	
}

.right {
	font-size: 1.0vmax;
	padding-right: 1%;
	margin: 0;
	text-align: right;
	width: 25%;
}

/* Content Wrapper */

div#content {
	background: rgba(255, 255, 255, 0.9);
	box-sizing: border-box;
	display: block;
	margin: 7vh auto 0;
	padding: 0 3% 0;
	text-align: justify;
	width: 80%;
	@include for-tablet-landscape-down {
		width: 100%;
	}
}
/* Header */

header {
	display: inline-block;
	height: 10vmax;
	position: relative;
	text-align: center;
	width: 100%;
}



.ptextcenter {
	left:50%;
	position: relative;
	top:50%;
	transform: translate(-50%, -50%);
}

div#tablewrapper {
}

div#main_content h1 {
	font-size: 2.5vmax;
	font-weight: bold;
		@include for-big-desktop-down {
			font-size: 2.7vmax;
		}
		@include for-desktop-down {
			font-size: 3.1vmax;
		}
		@include for-tablet-landscape-down {
			font-size: 3.4vmax;
		}
		@include for-phone-only {
			font-size: 3.5vmax;
		}
}

/* Footer */
footer {
	border-top: 1px solid grey;
	height: 10vh;
	margin-top: auto;
	text-align: center;
	width:100%;
	@include for-phone-only {
		font-size: 2.25vmin;
		width: 100%;
	}
}

/* Posts Feed Styling */

div.feedpost {
	border-bottom: 1px solid grey;
	margin-bottom: 2vh;
}

div.feedpost:last-of-type {
	border-bottom: none;
}

.feedpost h2 {
	font-weight: bold;
}
.feedpost a:hover, .left a:hover {
	opacity: 0.6;
	text-decoration: none;
	transition: opacity 0.3s;
}

.videocontainer {
	display: inline-block;
	height: 0;
	margin-bottom: 2vh;
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 25px;
	width: 100%;
}

.video {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

/* tables */
tr, th, td {
	@include for-phone-only {
		padding: 10px 2.0vmin !important; 
	}
}

tr td:nth-child(n+2), tr th:nth-child(n+2) {
	text-align: right;
}

th {
	font-size: 1.2vmax;
	@include for-big-desktop-down {
		font-size: 1.3vmax;
	}
	@include for-desktop-down {
		font-size: 1.7vmax;
	}
	@include for-tablet-landscape-down {
		font-size: 2.0vmax;
	}
	@include for-phone-only {
		font-size: 1.6vmax;
	}
}

/* Social Buttons */
.share {
    padding: 8px 15px;
    border-radius: 5px;
    margin: 1.5;
    text-align: right;
    
}

.share a {
        font-weight: 700;
        color: #000;
        margin-left: 5px;
        &:hover {
            border-bottom: 1px dashed #000;
        }
}

.share img {
	height: 30px;
	width: 30px;

}

